--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -15,89 +15,149 @@
     </ui:define>
 
     <ui:define name="toolbarComponents" >
+        <ui:repeat value="#{taskCardBean.taskResults}" var="result" rendered="#{taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_RUNNING}" >
+            <p:commandButton value="#{resultBean.getLabelFromBundle(result.getName())}" 
+                             icon="#{result.getIconName()}"
+                             update="centerFRM"
+                             action="#{taskCardBean.onExecute(result)}" style="float: right;">
+                <f:param name="isRequired" value="true"/>
+            </p:commandButton>
+        </ui:repeat> 
     </ui:define>    
     
-    <ui:define name="centerFormContent">
-        <p:panelGrid columns="1" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12" rendered="#{taskCardBean.editedItem != null}">
-            <p:outputLabel value="#{bundle.Executor}" indicateRequired="true" />
-            <h:panelGroup id="typeDocPanel" styleClass="ui-grid-col-12 without-spaces" >
-                <ui:include src="/view/common/item-select-list-btn.xhtml" >
-                    <ui:param name="_itemValue" value="#{taskCardBean.editedItem.owner}"/>
-                    <ui:param name="_required" value="#{param['isRequired'] == 'true'}" />
-                    <ui:param name="_disabled" value="#{taskCardBean.readOnly}"/>
-                    <ui:param name="_converter" value="staffConvertor" />
-                    <ui:param name="_itemPanel" value="staffPanel"/>
-                    <ui:param name="_titleItem" value="#{bundle.Executor}"/>
-                    <ui:param name="_selectorBean" value="#{staffBean}"/>
-                    <ui:param name="_items" value="#{staffBean.findAll()}"/>
-                    <ui:param name="_actionClear" value="setOwner"/>
-                    <ui:param name="_actionSelect" value="onExecutorChanged"/>
-                    <ui:param name="_rendered" value="#{true}"/>
-                    <ui:param name="_update" value=""/>
-                </ui:include>
-            </h:panelGroup>
+    <ui:define name="centerFormContent">       
+        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{taskCardBean.editedItem != null}" >
+            <p:tab title="#{bundle.Task}"  >
+                <p:panelGrid columns="1" styleClass="ui-grid-col-12 without-spaces" columnClasses="ui-grid-col-12">
+                    <p:outputLabel value="#{bundle.Executor}" indicateRequired="true" />
+                    <h:panelGroup id="typeDocPanel" styleClass="ui-grid-col-12 without-spaces" >
+                        <ui:include src="/view/common/item-select-list-btn.xhtml" >
+                            <ui:param name="_itemValue" value="#{taskCardBean.editedItem.owner}"/>
+                            <ui:param name="_required" value="#{param['isRequired'] == 'true'}" />
+                            <ui:param name="_disabled" value="#{taskCardBean.readOnly}"/>
+                            <ui:param name="_converter" value="staffConvertor" />
+                            <ui:param name="_itemPanel" value="staffPanel"/>
+                            <ui:param name="_titleItem" value="#{bundle.Executor}"/>
+                            <ui:param name="_selectorBean" value="#{staffBean}"/>
+                            <ui:param name="_items" value="#{staffBean.findAll()}"/>
+                            <ui:param name="_actionClear" value="setOwner"/>
+                            <ui:param name="_actionSelect" value="onExecutorChanged"/>
+                            <ui:param name="_rendered" value="#{true}"/>
+                            <ui:param name="_update" value=""/>
+                        </ui:include>
+                    </h:panelGroup>
 
-            <p:outputLabel value="#{bundle.Task}" indicateRequired="true" />
-            <p:inputText id="nameItem" value="#{taskCardBean.editedItem.name}"
-                         styleClass="ui-grid-col-12"                                                          
-                         required="#{param['isRequired'] == 'true'}"
-                         disabled="#{taskCardBean.readOnly}"
-                         requiredMessage="#{bundle.Field} [#{bundle.Task}] #{bundle.MustBeFilled}"/>
-            
-            <p:outputLabel value="#{bundle.DateBegin}:" indicateRequired="true" rendered="#{taskCardBean.isShowExtTaskAtr()}"/>
-            <p:calendar value="#{taskCardBean.editedItem.beginDate}" disabledWeekends="true" 
-                        styleClass="without-spaces" rendered="#{taskCardBean.isShowExtTaskAtr()}"
-                        required="#{param['isRequired'] == 'true'}" 
-                        disabled="#{taskCardBean.readOnly}"
-                        locale="#{sessionBean.locale}" 
-                        timeZone="#{TimeZone.getDefault()}" 
-                        showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
-                        navigator="true" yearRange="c-120:c+20"                     
-                        requiredMessage="#{bundle.Field} [#{bundle.DateBegin}] #{bundle.MustBeFilled}">
-            </p:calendar>
-            
-            <p:outputLabel value="#{bundle.PlanEndDate}:" indicateRequired="true"/>
-            <p:calendar value="#{taskCardBean.editedItem.planExecDate}" disabledWeekends="true" 
-                        styleClass="without-spaces" 
-                        timeZone="#{TimeZone.getDefault()}"
-                        showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
-                        required="#{param['isRequired'] == 'true'}" 
-                        disabled="#{taskCardBean.readOnly}"
-                        locale="#{sessionBean.locale}"
-                        navigator="true" yearRange="c-120:c+20"                                
-                        requiredMessage="#{bundle.Field} [#{bundle.PlanEndDate}] #{bundle.MustBeFilled}">
-            </p:calendar>
-
-            <p:outputLabel value="#{bundle.State}" indicateRequired="true"/>
-            <p:selectOneMenu value="#{taskCardBean.editedItem.state.currentState}" converter="stateConvertor"                           
-                           disabled="#{taskCardBean.isReadOnly()}"
-                           required="#{param['isRequired'] == 'true'}" 
-                           requiredMessage="#{bundle.Field} [#{bundle.State}] #{bundle.MustBeFilled}">
-                <f:selectItems value="#{taskCardBean.getAvailableStates()}" var="state" itemLabel="#{stateBean.getBundleName(state)}" itemValue="#{state}" />                
-            </p:selectOneMenu>
-            
-            <p:commandLink  value="#{bundle.GoToProcess}"
-                            rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.beanName ne 'processCardBean'}"
-                            actionListener="#{taskCardBean.onOpenProcess()}"/>
-            <p:commandLink  value="#{bundle.GoToDocument}"
-                            rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.beanName ne 'docCardBean'}"
-                            actionListener="#{taskCardBean.onOpenDocument()}"/>
-            <p:commandLink  value="#{bundle.ViewDoc}"
-                            rendered="#{taskCardBean.editedItem.scheme != null}"
-                            actionListener="#{taskCardBean.onViewDocument()}"/>
-                
-            <p:separator/>
-            <h:panelGroup>
-                <p:commandButton value="#{bundle.Delete}" 
-                                 rendered="#{taskCardBean.isShowExtTaskAtr()}"
+                    <p:outputLabel value="#{bundle.Task}" indicateRequired="true" />
+                    <p:inputText id="nameItem" value="#{taskCardBean.editedItem.name}"
+                                 styleClass="ui-grid-col-12"                                                          
+                                 required="#{param['isRequired'] == 'true'}"
                                  disabled="#{taskCardBean.readOnly}"
-                                 action="#{taskCardBean.onCloseCard('delete')}">                    
-                </p:commandButton>
-                <p:commandButton value="#{bundle.Save}" update="centerFRM"
-                                 action="#{taskCardBean.onCloseCard('save')}" style="float: right;">
-                    <f:param name="isRequired" value="true"/>
-                </p:commandButton>
-            </h:panelGroup>
-        </p:panelGrid>
+                                 requiredMessage="#{bundle.Field} [#{bundle.Task}] #{bundle.MustBeFilled}"/>
+
+                    <p:outputLabel value="#{bundle.DateBegin}:" indicateRequired="true" rendered="#{taskCardBean.isShowExtTaskAtr()}"/>
+                    <p:calendar value="#{taskCardBean.editedItem.beginDate}" disabledWeekends="true" 
+                                styleClass="without-spaces" rendered="#{taskCardBean.isShowExtTaskAtr()}"
+                                required="#{param['isRequired'] == 'true'}" 
+                                disabled="#{taskCardBean.readOnly}"
+                                locale="#{sessionBean.locale}" 
+                                timeZone="#{TimeZone.getDefault()}" 
+                                showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
+                                navigator="true" yearRange="c-120:c+20"                     
+                                requiredMessage="#{bundle.Field} [#{bundle.DateBegin}] #{bundle.MustBeFilled}">
+                    </p:calendar>
+
+                    <p:outputLabel value="#{bundle.DateAppointment}:" rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_DRAFT}"/>
+                    <p:calendar value="#{taskCardBean.editedItem.beginDate}" disabledWeekends="true" styleClass="without-spaces" 
+                                rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_DRAFT}"                                
+                                disabled="true"
+                                locale="#{sessionBean.locale}" 
+                                timeZone="#{TimeZone.getDefault()}" 
+                                showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
+                                navigator="true" yearRange="c-120:c+20">
+                    </p:calendar>
+                                        
+                    <p:outputLabel value="#{bundle.PlanEndDate}:" indicateRequired="true"/>
+                    <p:calendar value="#{taskCardBean.editedItem.planExecDate}" disabledWeekends="true" 
+                                styleClass="without-spaces" 
+                                timeZone="#{TimeZone.getDefault()}"
+                                showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
+                                required="#{param['isRequired'] == 'true'}" 
+                                disabled="#{taskCardBean.readOnly}"
+                                locale="#{sessionBean.locale}"
+                                navigator="true" yearRange="c-120:c+20"                                
+                                requiredMessage="#{bundle.Field} [#{bundle.PlanEndDate}] #{bundle.MustBeFilled}">
+                    </p:calendar>
+
+                    <p:outputLabel value="#{bundle.ActualEndDate}:" rendered="#{taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_FINISHED}"/>
+                    <p:calendar value="#{taskCardBean.editedItem.factExecDate}" disabledWeekends="true" 
+                                rendered="#{taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_FINISHED}"
+                                styleClass="without-spaces" 
+                                timeZone="#{TimeZone.getDefault()}"
+                                showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
+                                disabled="#{taskCardBean.readOnly}"
+                                locale="#{sessionBean.locale}"
+                                navigator="true" yearRange="c-120:c+20">                                
+                    </p:calendar>
+                     
+                    <p:outputLabel value="#{bundle.State}" indicateRequired="true"/>
+                    <p:selectOneMenu value="#{taskCardBean.editedItem.state.currentState}" converter="stateConvertor"                           
+                                   disabled="#{taskCardBean.editedItem.scheme != null}"                                   
+                                   required="#{param['isRequired'] == 'true'}" 
+                                   requiredMessage="#{bundle.Field} [#{bundle.State}] #{bundle.MustBeFilled}">
+                        <f:selectItems value="#{taskCardBean.getAvailableStates()}" var="state" itemLabel="#{stateBean.getBundleName(state)}" itemValue="#{state}" />                
+                    </p:selectOneMenu>
+
+                    <p:commandLink  value="#{bundle.GoToProcess}"
+                                    rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.beanName ne 'processCardBean'}"
+                                    actionListener="#{taskCardBean.onOpenProcess()}"/>
+                    <p:commandLink  value="#{bundle.GoToDocument}"
+                                    rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.beanName ne 'docCardBean'}"
+                                    actionListener="#{taskCardBean.onOpenDocument()}"/>
+                    <p:commandLink  value="#{bundle.ViewDoc}"
+                                    rendered="#{taskCardBean.editedItem.scheme != null}"
+                                    actionListener="#{taskCardBean.onViewDocument()}"/>
+                        
+                    <p:separator/>
+                    <h:panelGroup>
+                        <p:commandButton value="#{bundle.Delete}" 
+                                         rendered="#{taskCardBean.isShowExtTaskAtr()}"
+                                         disabled="#{taskCardBean.readOnly}"
+                                         action="#{taskCardBean.onCloseCard('delete')}">                    
+                        </p:commandButton>
+                        <p:commandButton value="#{bundle.Save}" update="centerFRM"
+                                         action="#{taskCardBean.onCloseCard('save')}" style="float: right;">
+                            <f:param name="isRequired" value="true"/>
+                        </p:commandButton>
+                    </h:panelGroup>
+                </p:panelGrid>
+            </p:tab>
+            
+            <p:tab title="#{bundle.Settings}" rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_DRAFT}">
+                <!-- Настройка напоминаний и настройка результатов -->
+                <p:panelGrid columns="1" styleClass="ui-grid-col-12 without-spaces" columnClasses="ui-grid-col-12" >
+                    <p:outputLabel value="#{bundle.ListResults}" indicateRequired="true"/>
+                    <p:separator style="margin-top: 0em;"/>
+                    <p:pickList id="pickList" value="#{taskCardBean.results}" var="result" converter="resultConverter"
+                                showCheckbox="true"
+                                required="#{param['isRequired'] == 'true'}"
+                                requiredMessage="#{bundle.Field} [#{bundle.ListResults}] #{bundle.MustBeFilled}"                                
+                                itemLabel="#{resultBean.getLabelFromBundle(result.getName())}" itemValue="#{result}">
+                        <f:facet name="sourceCaption">#{bundle.AvailableResults}</f:facet>
+                        <f:facet name="targetCaption">#{bundle.Selected}</f:facet>
+                    </p:pickList>
+                    
+                    <p:outputLabel value="#{bundle.Reminder}"/>
+                    <p:separator style="margin-top: 0em;"/>
+                </p:panelGrid>
+            </p:tab>
+            
+            <p:tab title="#{bundle.Execution}" rendered="#{taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_DRAFT}">
+                <p:panelGrid columns="1" styleClass="ui-grid-col-12 without-spaces" columnClasses="ui-grid-col-12" >                   
+                    <p:outputLabel value="#{bundle.Comment}"/>
+                    <p:textEditor value="#{taskCardBean.editedItem.comment}" height="300" styleClass="ui-grid-col-12"/>                                                           
+                </p:panelGrid>
+            </p:tab>
+            
+        </p:tabView>
     </ui:define>
 </ui:composition>
