--- a/escom-bpm-web/src/main/webapp/view/processes/elements/condition-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/condition-card.xhtml
@@ -1,7 +1,44 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
-                 template="/view/processes/elements/element.xhtml">
+                 template="/view/templ/templ-dlg.xhtml"
+                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 
+    <ui:param name="_bean" value="#{conditionCardBean}"/>
+
+    <ui:define name="title">
+        #{bundle.Condition}
+    </ui:define>
+    
+    <ui:define name="menuActions" >
+    </ui:define>
+
+    <ui:define name="toolbarComponents" >
+    </ui:define>    
+    
+    <ui:define name="centerFormContent">       
+        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{conditionCardBean.editedItem != null}" >
+            <p:tab title="#{bundle.Condition}"  >
+                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                    <p:outputLabel value="#{bundle.Condition}:" indicateRequired="true"/>
+                    <p:selectOneMenu value="#{conditionCardBean.selected}" converter="conditionConvertor"
+                                   styleClass="ui-grid-col-12"
+                                   required="#{param['isRequired'] == 'true'}" 
+                                   requiredMessage="#{bundle.Field} [#{bundle.Caption}] #{bundle.MustBeFilled}">
+                        <f:selectItems value="#{conditionBean.findAll()}" var="item" itemLabel="#{conditionCardBean.getLabelFromBundle(item.getName())}" itemValue="#{item}"/>
+                    </p:selectOneMenu>
+                    <p:separator/>
+                    <p:commandButton value="#{bundle.Save}" update="centerFRM"
+                                    action="#{conditionCardBean.onCloseCard('save')}" style="float: right;">
+                        <f:param name="isRequired" value="true"/>
+                    </p:commandButton>
+                </p:panelGrid>
+            </p:tab>
+            
+            <p:tab title="#{bundle.Settings}" >
+            
+            </p:tab>
+        </p:tabView>
+    </ui:define>
 </ui:composition>
