--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -59,7 +59,7 @@
                         <p:autoUpdate />
                     </p:messages>
 
-                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
+                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
                         <p:toolbar >
                             <f:facet name="left">
                                 <p:menuButton value="#{bundle.Actions}" icon="ui-icon-gear">
