--- a/escom-bpm-web/src/main/webapp/view/processes/elements/element.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/element.xhtml
@@ -1,19 +1,28 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
-                 template="/view/templ/templ.xhtml">
+                 template="/view/templ/templ.xhtml"
+                 xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:define name="title">
         #{processCardBean.getNameBasedElement()}
     </ui:define>
 
     <ui:define name="body">        
-        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">            
+        <h:form id="centerFRM" >
+            <p:hotkey bind="esc" id="hotskey"
+                      immediate="true"
+                      onstart="document.getElementById('centerFRM:btnClose').click();">
+            </p:hotkey>
 
-            <p:outputLabel value="#{bundle.Name}"/>
-            <p:inputText value="#{processCardBean.baseElement.caption}"                          
-                         styleClass="ui-grid-col-12"/>
+            <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 without-spaces">
+                <p:autoUpdate />
+            </p:messages>    
 
-        </p:panelGrid>
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
+                <ui:insert name="elementContent"/>
+            </p:panelGrid>
+            
+        </h:form>
     </ui:define>
 </ui:composition>
