--- a/escom-bpm-web/src/main/webapp/view/processes/elements/state-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/state-card.xhtml
@@ -1,7 +1,42 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
-                 template="/view/processes/elements/element.xhtml">
+                 template="/view/templ/templ-dlg.xhtml"
+                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+    <ui:param name="_bean" value="#{stateCardBean}"/>
+
+    <ui:define name="title">
+        #{bundle.ChangeDocState}
+    </ui:define>
+    
+    <ui:define name="menuActions" >
+    </ui:define>
+
+    <ui:define name="toolbarComponents" >
+    </ui:define>    
+    
+    <ui:define name="centerFormContent">       
+        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{_bean.editedItem != null}" >
+            <p:tab title="#{bundle.State}"  >
+                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                    <p:selectOneMenu value="#{_bean.editedItem}" converter="stateConvertor"                           
+                           styleClass="ui-grid-col-6"
+                           required="#{param['isRequired'] == 'true'}" 
+                           requiredMessage="#{bundle.Field} [#{bundle.State}] #{bundle.MustBeFilled}">
+                           <f:selectItems value="#{docsBean.getAvailableStates()}" var="state" itemLabel="#{stateBean.getBundleName(state)}" itemValue="#{state}" />
+                    </p:selectOneMenu>
+                    <p:separator/>
+                    <p:commandButton value="#{bundle.Save}" update="centerFRM"
+                                    action="#{_bean.onCloseCard('save')}" style="float: right;">
+                        <f:param name="isRequired" value="true"/>
+                    </p:commandButton>
+                </p:panelGrid>
+            </p:tab>
+            
+            <p:tab title="#{bundle.Settings}" >            
+            </p:tab>
+        </p:tabView>
+    </ui:define>
 
 </ui:composition>
